--- a/accounts-qa.yml
+++ b/accounts-qa.yml
@@ -7,7 +7,7 @@ accounts:
   message: "Welcome to EazyBank accounts related QA APIs "
   contactDetails:
     name: "Avi Bhise - QA Lead"
-    email: "avibhise@gmailcom"
+    email: "avibhise@gmail.com"
   onCallSupport:
     - (666) 265-3765
     - (666) 734-8371
