--- a/accounts.yml
+++ b/accounts.yml
@@ -7,7 +7,7 @@ accounts:
   message: "Welcome to EazyBank accounts related local APIs "
   contactDetails:
     name: "Sudarshan Bhise - Developer"
-    email: "sudarshanbhise12345@gmailcom"
+    email: "sudarshanbhise12345@gmail.com"
   onCallSupport:
     - (555) 555-1234
     - (555) 523-1345
