--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -3,7 +3,7 @@ build:
   version: "1.0"
 
 loans:
-  message: "Welcome to EazyBank loans related Production APIs "
+  message: "Welcome to EazyBank loans related prod APIs "
   contactDetails:
     name: "Akash Bhise - Product Owner"
     email: "akashbhise@gmail.com"
