--- a/accounts.yml
+++ b/accounts.yml
@@ -4,7 +4,7 @@ build:
   version: "3.0"
 
 accounts:
-  message: "Welcome to EazyBank accounts related local APIs "
+  message: "Welcome to EazyBank accounts related docker APIs "
   contactDetails:
     name: "Sudarshan Bhise - Developer"
     email: "sudarshanbhise12345@gmail.com"
