--- a/accounts.yml
+++ b/accounts.yml
@@ -1,13 +1,11 @@
-
-
 build:
   version: "3.0"
 
 accounts:
-  message: "Welcome to EazyBank accounts related local APIs "
+  message: "Welcome to EazyBank accounts related docker APIs "
   contactDetails:
-    name: "Sudarshan Bhise - Developer"
-    email: "sudarshanbhise12345@gmailcom"
+    name: "John Doe - Developer"
+    email: "john@eazybank.com"
   onCallSupport:
     - (555) 555-1234
     - (555) 523-1345
