--- a/cards.yml
+++ b/cards.yml
@@ -1,13 +1,11 @@
-
-
 build:
   version: "3.0"
 
 cards:
   message: "Welcome to EazyBank cards related local APIs "
   contactDetails:
-    name: "Sudarshan Bhise - Developer"
-    email: "sudarshanbhise1234@gmail.com"
+    name: "Dragos Lech - Developer"
+    email: "dragos@eazybank.com"
   onCallSupport:
     - (412) 419-3491
     - (915) 382-1932
