--- a/loans-prod.yml
+++ b/loans-prod.yml
@@ -1,12 +1,11 @@
-
 build:
   version: "1.0"
 
 loans:
-  message: "Welcome to EazyBank loans related prod APIs "
+  message: "Hey, welcome to EazyBank loans related prod APIs "
   contactDetails:
-    name: "Akash Bhise - Product Owner"
-    email: "akashbhise@gmail.com"
+    name: "Pelias Sudhir - Product Owner"
+    email: "pelias@eazybank.com"
   onCallSupport:
     - (723) 656-8709
     - (156) 342-0956
