--- a/loans.yml
+++ b/loans.yml
@@ -1,13 +1,11 @@
-
-
 build:
   version: "3.0"
 
 loans:
   message: "Welcome to EazyBank loans related local APIs "
   contactDetails:
-    name: "Sudarshan Bhise - Developer"
-    email: "sudarshanbhise@gmail.com"
+    name: "Amaal Grega - Developer"
+    email: "amaal@eazybank.com"
   onCallSupport:
     - (452) 456-2176
     - (546) 764-8934
